# sn-geo-political-simulator

./: .gitignore  .npmrc.example  .pre-commit-config.yaml  README.md  docker-compose.yml
.shisho/: policy.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  logging_config.py  main.py  map_encoding.py  schemas.py
backend/app/services/: game_service.py
backend/app/stores/: composite_store.py  factory.py  memory_store.py  postgres_store.py  protocol.py  redis_store.py  serialization.py
backend/game/: __init__.py  types.py
backend/game/economy/: resources.py  trade.py
backend/game/military/: invasion.py  units.py
backend/game/nation/: borders.py  category.py
backend/game/turn/: processor.py
backend/game/victory/: presets.py
backend/game/world/: environment.py  h3_grid.py  movement.py  terrain.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_api_endpoints.py  test_game_lifecycle.py  test_health_integration.py  test_stores.py  test_turn_resolution.py  test_turn_timeout_integration.py
backend/tests/unit/: test_h3_world.py  test_health.py  test_invasion.py  test_map_encoding.py  test_movement_cost.py  test_nation_category.py  test_redis_store.py  test_resources.py  test_reward_functions.py  test_serialization.py  test_trade.py  test_trade_resolve.py  test_turn_processor.py  test_turn_timeout.py  test_victory.py
rl-pipeline/: Dockerfile  pyproject.toml  train.py  train_rllib.py
rl-pipeline/rl_pipeline/: __init__.py  health.py
rl-pipeline/rl_pipeline/env/: geopolitical_env.py  spaces.py
rl-pipeline/rl_pipeline/rewards/: continental.py  island.py  types.py
rl-pipeline/rl_pipeline/rllib/: __init__.py  multi_agent.py
rl-pipeline/tests/: test_action_space.py  test_env_wrapper.py  test_health.py  test_observation_space.py  test_reward_functions.py  test_rllib_config.py
(+29 files in other folders)
