[project]
name = "geo-political-game-engine"
version = "0.1.0"
description = "Geopolitical strategy simulation game engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "h3>=4.1.0",
    "numpy>=2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "prometheus-client>=0.21.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
    "fakeredis[lua]>=2.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game", "app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["game", "app"]
branch = true

[tool.coverage.report]
fail_under = 70
omit = ["tests/*"]
