[project]
name = "geo-political-rl"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=2.1.0",
    "httpx>=0.27.0",
    "stable-baselines3>=2.3.0",
    "torch>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-cov>=6.0.0", "ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rl_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["rl_pipeline"]
branch = true

[tool.coverage.report]
fail_under = 70
